# pyhgf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  api.html  cite.html  genindex.html  index.html  learn.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  learn.doctree  references.doctree
.doctrees/__intersphinx_cache__/: pytensor_objects.inv
.doctrees/notebooks/: 0.1-Theory.doctree  0.2-Creating_networks.doctree  0.3-Generalised_filtering.doctree  0.4-Planning_and_acting.doctree  0.5-Deep_learning.doctree  0.5-Learning.doctree  1.1-Binary_HGF.doctree  1.2-Categorical_HGF.doctree  1.3-Continuous_HGF.doctree  2-Using_custom_response_functions.doctree  3-Multilevel_HGF.doctree  4-Parameter_recovery.doctree  5-Non_linear_value_coupling.doctree  Example_1_Heart_rate_variability.doctree  Example_2_Input_node_volatility_coupling.doctree  Example_3_Multi_armed_bandit.doctree  Example_4_Causal_discovery.doctree  Example_5_Iowa_Gambling_Task.doctree  Exercise_1_Introduction_to_the_generalised_hierarchical_gaussian_filter.doctree  Exercise_2_Bayesian_reinforcement_learning.doctree  Untitled.doctree
.github/workflows/: ci.yml  docs.yml  pypi.yml  test.yml
_modules/: index.html  pyhgf.html
_modules/pyhgf/: distribution.html  math.html  response.html
_sources/: api.rst.txt  learn.md.txt
_sources/notebooks/: 0.5-Deep_learning.ipynb.txt  0.5-Learning.ipynb.txt  1.3-Continuous_HGF.ipynb.txt  4-Parameter_recovery.ipynb.txt  Exercise_2_Bayesian_reinforcement_learning.ipynb.txt
dev/: .buildinfo  api.html  cite.html  genindex.html  index.html  learn.html  objects.inv  prf-prf.html  py-modindex.html  references.html  search.html  searchindex.js
dev/.doctrees/: api.doctree  cite.doctree  environment.pickle  index.doctree  learn.doctree  references.doctree
dev/_modules/: index.html  pyhgf.html
dev/_sources/: api.rst.txt  index.md.txt  learn.md.txt
dev/_static/: documentation_options.js
dev/notebooks/: 0.1-Theory.html  0.2-Creating_networks.html  0.3-Generalised_filtering.html  (+22 more)
docs/: benchmark_results.csv  paper.ipynb
examples/: exponential.rs
notebooks/: 0.1-Theory.html  0.2-Creating_networks.html  0.3-Generalised_filtering.html  0.4-Planning_and_acting.html  0.5-Deep_learning.html  0.5-Learning.html  1.1-Binary_HGF.html  1.2-Categorical_HGF.html  1.3-Continuous_HGF.html  2-Using_custom_response_functions.html  3-Multilevel_HGF.html  4-Parameter_recovery.html  5-Non_linear_value_coupling.html  Example_1_Heart_rate_variability.html  Example_2_Input_node_volatility_coupling.html  Example_3_Multi_armed_bandit.html  Example_4_Causal_discovery.html  Example_5_Iowa_Gambling_Task.html  Exercise_1_Introduction_to_the_generalised_hierarchical_gaussian_filter.html  Exercise_2_Bayesian_reinforcement_learning.html  Untitled.html
pyhgf/: __init__.py  distribution.py  math.py  plots.py  response.py  typing.py
src/: lib.rs  math.rs  model.rs  optimiser.rs
tests/: test_binary.py  test_binary.rs  test_builder.py  test_categorical.py  test_continuous.py  test_continuous.rs  test_deepnetwork.py  test_distribution.py  test_eqx_types.py  test_error_types.py  test_fit.rs  test_fused.py  test_hybrid.py  test_math.py  test_model.py  test_natural_gradient.py  test_pcmodule_state.py  test_plots.py  test_responses.py  test_rs_deepnetwork.py  test_trajectory_equivalence.py  test_transformer.py  test_transplant.py  test_utils.py  test_vectorized_deep_network.py  test_volatile.rs  test_weight_gradient.py
(+371 files in other folders)
