[package]
name = "rshgf"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rshgf"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"    # The source file of the target.

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module", "abi3-py37"] }
numpy = "0.28"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
ndarray = { version = "0.16", features = ["matrixmultiply-threading", "rayon"] }
rayon = "1.10"

# BLAS provider, linked only under the `blas` feature, with a per-platform
# backend: the system Accelerate framework on Apple targets (no build step),
# OpenBLAS elsewhere (requires an OpenBLAS toolchain).
[target.'cfg(target_vendor = "apple")'.dependencies]
blas-src = { version = "0.10", optional = true, features = ["accelerate"] }

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
blas-src = { version = "0.10", optional = true, features = ["openblas"] }

[features]
# The default build of the vectorised backend (`DeepNetwork`): f32 arithmetic
# with `.dot()` routed through a linked BLAS (SGEMM). The previous engine —
# f64 through the pure-Rust `matrixmultiply` kernel — remains available:
#
#   maturin develop --release                                # f32 + BLAS (default)
#   maturin develop --release -F f64                         # f64 + BLAS
#   maturin develop --release --no-default-features          # f32, pure Rust
#   maturin develop --release --no-default-features -F f64   # the previous engine
#
# The nodalised (per-node) backend computes in f64 under every configuration.
default = ["blas"]

# Route ndarray's `.dot()` through a linked BLAS (SGEMM/DGEMM) instead of the
# pure-Rust `matrixmultiply` kernel. Pays off at wide layers and batched gemm;
# for small per-sample ops `matrixmultiply` is often as fast.
blas = ["ndarray/blas", "dep:blas-src"]

# Compute the vectorised backend in f64 instead of the default f32 — for
# bit-level parity with the JAX backend under `jax_enable_x64`, at twice the
# memory traffic.
f64 = []
